--- a/benefits_cloud_computing.html
+++ b/benefits_cloud_computing.html
@@ -1,13 +1,53 @@
 <html>
   <head>
     <link rel="stylesheet" href="dist/reveal.css" />
-    <link rel="stylesheet" href="dist/theme/white.css" />
+    <link rel="stylesheet" href="dist/theme/dracula.css" />
   </head>
   <body>
     <div class="reveal">
       <div class="slides">
-        <section>Slide 1</section>
-        <section>Slide 2</section>
+        <section>Benefits of Cloud Computing!!</section>
+        <section>
+          <section>
+            Trade upfront/capital(CAPEX) expense for/with variable/operational(OPEX) expense
+          </section>
+          <section>No need to heavily invest in data centers and servers</section>
+          <section>Can only pay when consuming computing resources</section>
+          <section>Pay only for how much you consume</section>
+        </section>
+
+        <section>
+          <section>Stop spending money to run and maintain data centers</section>
+          <section>Focus on projects that differentiate your business, not the infrastructure</section>
+          <section>Cloud computing lets you focus on your own customers, rather than on the heavy lifting of racking, stacking, and powering servers</section>
+        </section>
+
+        <section>
+          <section>Stop guessing capacity</section>
+          <section>Eliminate guessing on your infrastructure capacity needs</section>
+          <section>Prior decisions can lead to expensive idle resources or limited capacities</section>
+          <section>Can access as much or as little capacity as you need and scale up and down</section>
+        </section>
+
+        <section>
+          <section>Benefit from massive economies of scale</section>
+          <section>Achieve a lower variable cost than you can get on your own</section>
+          <section>Usage from hundreds of thousands of customers is aggregated in the cloud</section>
+          <section>Higher economies of scale with lower pay-as-you-go price</section>
+        </section>
+
+        <section>
+          <section>Increase speed and agility</section>
+          <section>IT resources are just a click away</section>
+          <section>Reduce the time to make those resources available to your developers</section>
+          <section>Dramatic increase in agility for the organization since the cost and time it takes to experiment and develop is significantly lower</section>
+        </section>
+
+        <section>
+          <section>Go global in minutes</section>
+          <section>Easily deploy your application in multiple regions around the world with just a few clicks</section>
+          <section>You can provide lower latency and a better experience for your customers at minimal cost</section>
+        </section>
       </div>
     </div>
     <script src="dist/reveal.js"></script>
